--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-pino-logger": "^7.0.0",
     "joi": "^17.11.0",
     "mongoose": "^7.6.3",
+    "mysql2": "^3.6.3",
     "pino": "^8.16.0",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/express-pino-logger": "^4.0.4",
-    "@types/node": "^20.8.7",
+    "@types/node": "^20.9.0",
     "@types/qr-image": "^3.2.8",
     "@types/sqlite3": "^3.1.10",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
