--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "repository": "https://github.com/icaksh/cinnabar-otp",
   "author": "icaksh <me@icaksh.my.id>",
-  "license": "GNU General Public License v3.0",
+  "license": "GPL-3.0",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@sequelize/core": "^7.0.0-alpha.33",
     "@typegoose/typegoose": "^11.6.0",
     "@types/sequelize": "^4.28.17",
     "@whiskeysockets/baileys": "^6.5.0",
+    "basic-auth": "^2.0.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -33,6 +34,7 @@
     "typed-emitter": "^2.1.0"
   },
   "devDependencies": {
+    "@types/basic-auth": "^1.1.6",
     "@types/express": "^4.17.20",
     "@types/express-pino-logger": "^4.0.4",
     "@types/node": "^20.9.0",
