--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
-PRIVATE_API_KEY=
-NAME=""
-SESSION=""
+# APP CONFIGURATION
+PRIVATE_API_KEY= # Private API Key 
+NAME="" # WA Client Name
+SESSION="" # WA Session Name
 PORT=
-AUTH_NAME=
-AUTH_PASSWORD=
 
+# LOGIN PAGE
+AUTH_NAME= # Login Page Auth Name
+AUTH_PASSWORD= # Login Page Auth Password
+
+# DATABASE
 DB_NAME=
 DB_USER=
 DB_HOST=
 DB_DRIVER=
 DB_PASSWORD=
 
+# SETTINGAN OTP
 FIRST_STATEMENT='Kode OTP Anda untuk mengakses adalah'
 LAST_STATEMENT='pastikan jaga kerahasiaan kode anda dari siapapun!'
-OTP_LIFETIME=2
-OTP_MAX_ATTEMPTS=3
+OTP_LIFETIME=2 # Lifetime OTP, kalikan dengan 1 menit
+OTP_MAX_ATTEMPTS=3 # Maks bisa spamming OTP
