--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-pino-logger": "^7.0.0",
     "joi": "^17.11.0",
     "mysql2": "^3.6.3",
+    "node-cache": "^5.1.2",
     "pino": "^8.16.0",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
