--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-pino-logger": "^7.0.0",
     "joi": "^17.11.0",
+    "link-preview-js": "^3.0.5",
     "mysql2": "^3.6.3",
     "node-cache": "^5.1.2",
     "pino": "^8.16.0",
